--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
-  "homepage": "https://Namrod16127.github.io/rontec-web/",
-  "private": true,
+  "homepage": "https://namrod16127.github.io/rontec-web/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
